test/bad/eqintro_sides_mismatch.pa
lemma bad : 0 = S(0) {
    0 = S(0) by eq_intro;
}
